--- a/FlowerShopTemplate/style.css
+++ b/FlowerShopTemplate/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     color: #0c5b47;
     background-color: #fffbf6;
@@ -122,4 +126,22 @@ body {
     text-decoration: none;
     color: #0c5b47;
   }
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: rgb(250, 207, 207);
+    color: rgb(255, 149, 167);
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 4px;
+  }
   
+  #myBtn:hover {
+    background-color: rgb(253, 237, 237);
+  }
